tests/cases/fail/match_expression_missing_multiple_variants.p4
enum TokenKind:
    INT
    IDENT
    END

def main() -> None:
    kind = TokenKind.INT
    label = match kind:
        case TokenKind.INT: "int"

    print(label)
